--- a/P1_Final_Fabbri_Mateo/P1_Final_Fabbri_Mateo.vcxproj
+++ b/P1_Final_Fabbri_Mateo/P1_Final_Fabbri_Mateo.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Asteroid.cpp" />
     <ClCompile Include="AwesomeLibrary.cpp" />
     <ClCompile Include="Base.cpp" />
+    <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="HUD.cpp" />
@@ -152,6 +153,7 @@
     <ClInclude Include="Asteroid.h" />
     <ClInclude Include="AwesomeLibrary.h" />
     <ClInclude Include="Base.h" />
+    <ClInclude Include="Bullet.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="HUD.h" />
